--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local AI</title>
-
+    <meta
+      name="description"
+      content="Offline AI Chatbot powered by open-source models"
+    />
+    <meta name="theme-color" content="#000000" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="icon" href="/favicon/logo.png" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
